--- a/HTML.html
+++ b/HTML.html
@@ -31,6 +31,6 @@
        <br>br은 줄바꿈<br>br은 줄바꿈
        <br>p는 단락</p>
      <p style="margin-top:40px;">p style="margin-tip:40px;"은 단락 크기까지 변경. 현재 이해 못함</p>
-     <img src="web1/coding.jpg" width="100"> 'img scr=위치'는 사진, 'width="숫자"'는 크기, 이런것들을 속성=attribute
+     <img src="coding.jpg" width="100"> 'img scr=위치'는 사진, 'width="숫자"'는 크기, 이런것들을 속성=attribute
 </body>
 </html>
